Simple fix for move icon being slightly off center in firefox, issue #7621

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -2012,6 +2012,7 @@ div.submit-button:disabled {
 #moveButton {
   z-index: 2;
   position: absolute;
+  right: 10px;
   border-radius: 0px;
 }
 
